ajoute du menu note(html) dans le dossier

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="section_menu">
                 <!--Le centre de la page n'est pour le moment composé que d'un élément, la présentation des cartes-->
                 <article class="menu menu-1">
-                    <a href="note.html">
+                    <a href="menu-note.html">
                         <div class="m-icon m-icon-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
                         </div>
                         <h2 class="m-titre m-titre-1">La note enchantée</h2>
@@ -40,21 +40,21 @@
                     </a>
                 </article>
                 <article class="menu menu-2">
-                    <a href="chic.html">
+                    <a href="menu-chic.html">
                         <div class="m-icon m-icon-2"></div>
                         <h2 class="m-titre m-titre-2">Le chic à la française</h2>
                         <p class="menu-p menu-p-2">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-3">
-                    <a href="delice.html">
+                    <a href="menu-délice.html">
                         <div class="m-icon m-icon-3"></div>
                         <h2 class="m-titre m-titre-3">Le délice des papilles</h2>
                         <p class="menu-p menu-p-3">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-4">
-                    <a href="palette.html">
+                    <a href="menu-palette.html">
                         <div class="m-icon m-icon-4"></div>
                         <h2 class="m-titre m-titre-4">La palette du goût</h2>
                         <p class="menu-p menu-p-4">Menu</p>
