--- a/chic.html
+++ b/chic.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Menu du Chic à la française - Ohmyfood! est un site web de réservation de restaurants et de composition de menus
-    en ligne." />
-    <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
-    <link
-        href="https://fonts.googleapis.com/css?family=Crimson+Text%7CKalam%7CKaushan+Script%7CKurale%7CMontserrat:400,500,600,700&display=swap"
-        rel="stylesheet">
-    <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
-    <title>ohmyfood - Le chic à la française</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+        en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
+        restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
+        carte !" />
+        <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
+        <link
+            href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
+            rel="stylesheet">
+        <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
+        <title>ohmyfood</title>
+    </head>
 
 <body>
     <header id="main_header">
@@ -101,7 +103,7 @@
         </section>
     </div>
     <footer id="main_footer">
-        <div class="Mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 
