--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
     restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
     carte !" />
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
     <link
         href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
         rel="stylesheet">
@@ -21,50 +21,50 @@
         <!--Le "main header correspond au header contenant le nom du site et présent sur toutes les pages-->
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
-    <section class="container">
-        <div id="Prochainement">
-            <div class="btn">
-                <h2>Prochainement</h2>
-            </div>
-        </div>
+    <section class="conteneur">
         <div class="center_page">
             <!--Contient le contenu centrale de la page-->
             <div id="section_menu">
                 <!--Le centre de la page n'est pour le moment composé que d'un élément, la présentation des cartes-->
                 <article class="menu menu-1">
-                    <a href="menu-note.html">
-                        <div class="m-icon m-icon-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
+                    <a href="note.html">
+                        <div class="menu__ico menu__ico-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
                         </div>
-                        <h2 class="m-titre m-titre-1">La note enchantée</h2>
-                        <p class="menu-p menu-p-1">MENU</p>
+                        <h2 class="menu__titre menu__titre-1">La note enchantée</h2>
+                        <p class="menu__menu menu__menu-1">MENU</p>
                     </a>
                 </article>
                 <article class="menu menu-2">
-                    <a href="menu-chic.html">
-                        <div class="m-icon m-icon-2"></div>
-                        <h2 class="m-titre m-titre-2">Le chic à la française</h2>
-                        <p class="menu-p menu-p-2">Menu</p>
+                    <a href="chic.html">
+                        <div class="menu__ico menu__ico-2"></div>
+                        <h2 class="menu__titre menu__titre-2">Le chic à la française</h2>
+                        <p class="menu__menu menu__menu-2">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-3">
-                    <a href="menu-délice.html">
-                        <div class="m-icon m-icon-3"></div>
-                        <h2 class="m-titre m-titre-3">Le délice des papilles</h2>
-                        <p class="menu-p menu-p-3">Menu</p>
+                    <a href="delice.html">
+                        <div class="menu__ico menu__ico-3"></div>
+                        <h2 class="menu__titre menu__titre-3">Le délice des papilles</h2>
+                        <p class="menu__menu menu__menu-3">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-4">
-                    <a href="menu-palette.html">
-                        <div class="m-icon m-icon-4"></div>
-                        <h2 class="m-titre m-titre-4">La palette du goût</h2>
-                        <p class="menu-p menu-p-4">Menu</p>
+                    <a href="palette.html">
+                        <div class="menu__ico menu__ico-4"></div>
+                        <h2 class="menu__titre menu__titre-4">La palette du goût</h2>
+                        <p class="menu__menu menu__menu-4">Menu</p>
                     </a>
                 </article>
             </div>
         </div>
+        <div id="soon">
+            <div class="btn">
+                <h2>Prochainement</h2>
+            </div>
+        </div>
     </section>
     <footer id="main_footer">
-        <div class="Mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 </body>
