--- a/legals.html
+++ b/legals.html
@@ -8,7 +8,7 @@
         en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
         restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
         carte !" />
-        <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
         <link
             href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
             rel="stylesheet">
@@ -66,7 +66,7 @@
         </article>
     </div>
     <footer id="main_footer">
-        <div class="Mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 </body>
