--- a/note.html
+++ b/note.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Menu de La Note Enchantée - Ohmyfood! est un site web de réservation de restaurants et de composition de menus
-    en ligne." />
-    <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
-    <link href="https://fonts.googleapis.com/css?family=Kalam%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
-        rel="stylesheet">
-    <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
-    <title>ohmyfood - La Note Enchantée</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+        en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
+        restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
+        carte !" />
+        <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
+        <link
+            href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
+            rel="stylesheet">
+        <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
+        <title>ohmyfood</title>
+    </head>
 
 <body>
     <header id="main_header">
