--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
                     <a href="note.html">
                         <div class="menu__ico menu__ico-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
                         </div>
-                        <h2 class="menu__titre menu__titre-1">La note enchantée</h2>
-                        <p class="menu__menu menu__menu-1">MENU</p>
+                        <h2 class="menu-titre menu-titre1">La note enchantée</h2>
+                        <p class="menu-p menu-p-1">MENU</p>
                     </a>
                 </article>
                 <article class="menu menu-2">
                     <a href="chic.html">
                         <div class="menu__ico menu__ico-2"></div>
-                        <h2 class="menu__titre menu__titre-2">Le chic à la française</h2>
-                        <p class="menu__menu menu__menu-2">Menu</p>
+                        <h2 class="menu-titre menu-titre3">Le chic à la française</h2>
+                        <p class="menu-p menu-p-2">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-3">
                     <a href="delice.html">
                         <div class="menu__ico menu__ico-3"></div>
-                        <h2 class="menu__titre menu__titre-3">Le délice des papilles</h2>
-                        <p class="menu__menu menu__menu-3">Menu</p>
+                        <h2 class="menu-titre menu-titre3">Le délice des papilles</h2>
+                        <p class="menu-p menu-p-3">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-4">
                     <a href="palette.html">
                         <div class="menu__ico menu__ico-4"></div>
-                        <h2 class="menu__titre menu__titre-4">La palette du goût</h2>
-                        <p class="menu__menu menu__menu-4">Menu</p>
+                        <h2 class="menu-titre menu-titre4">La palette du goût</h2>
+                        <p class="menu-p menu-p-4">Menu</p>
                     </a>
                 </article>
             </div>
