--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="section_menu">
                 <!--Le centre de la page n'est pour le moment composé que d'un élément, la présentation des cartes-->
                 <article class="menu menu-1">
-                    <a href="note.html">
+                    <a href="menu-note.html">
                         <div class="menu__ico menu__ico-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
                         </div>
                         <h2 class="menu-titre menu-titre1">La note enchantée</h2>
@@ -35,21 +35,23 @@
                     </a>
                 </article>
                 <article class="menu menu-2">
-                    <a href="chic.html">
+                    <a href="menu-chic.html">
                         <div class="menu__ico menu__ico-2"></div>
-                        <h2 class="menu-titre menu-titre3">Le chic à la française</h2>
+                        <h2 class="menu-titre menu-titre2">Le chic à la française</h2>
                         <p class="menu-p menu-p-2">Menu</p>
                     </a>
                 </article>
+            </div>
+            <div id="section_menu2">
                 <article class="menu menu-3">
-                    <a href="delice.html">
+                    <a href="menu-delice.html">
                         <div class="menu__ico menu__ico-3"></div>
                         <h2 class="menu-titre menu-titre3">Le délice des papilles</h2>
                         <p class="menu-p menu-p-3">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-4">
-                    <a href="palette.html">
+                    <a href="menu-palette.html">
                         <div class="menu__ico menu__ico-4"></div>
                         <h2 class="menu-titre menu-titre4">La palette du goût</h2>
                         <p class="menu-p menu-p-4">Menu</p>
@@ -64,7 +66,7 @@
         </div>
     </section>
     <footer id="main_footer">
-        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
+        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 </body>
