animation du bouton prochainement + soulignement des titres des menus secondaires

--- a/mentions.html
+++ b/mentions.html
@@ -21,10 +21,10 @@
         <!--Le "main header correspond au header contenant le nom du site et présent sur toutes les pages-->
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
-    <div class="center_page center_page--legals">
+    <div class="center_page center_page--mentions">
         <!--Contient le contenu centrale de la page-->
 
-        <article id=legals>
+        <article id=mentions>
             <h2 class=list_header>
                 Mentions légales
             </h2>
@@ -66,7 +66,7 @@
         </article>
     </div>
     <footer id="main_footer">
-        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
+        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 </body>
