--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
             </div>
         </div>
         <div id="soon">
-            <div class="btn">
+            <div class="btn btn--anim">
                 <h2>Prochainement</h2>
+                <div class="dot dot--1">.</div>
+                <div class="dot dot--2">.</div>
+                <div class="dot dot--3">.</div>
             </div>
         </div>
     </section>
