--- a/menu-palette.html
+++ b/menu-palette.html
@@ -103,7 +103,7 @@
         </section>
     </div>
     <footer id="main_footer">
-        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
+        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 
