mise en place du reste des animations

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <!--Le centre de la page n'est pour le moment composé que d'un élément, la présentation des cartes-->
                 <article class="menu menu-1">
                     <a href="menu-note.html">
-                        <div class="menu__ico menu__ico-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
+                        <div class="menu-icon menu-icon-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
                         </div>
-                        <h2 class="menu-titre menu-titre1">La note enchantée</h2>
+                        <h2 class="menu-titre menu-titre-1">La note enchantée</h2>
                         <p class="menu-p menu-p-1">MENU</p>
                     </a>
                 </article>
                 <article class="menu menu-2">
                     <a href="menu-chic.html">
-                        <div class="menu__ico menu__ico-2"></div>
-                        <h2 class="menu-titre menu-titre2">Le chic à la française</h2>
+                        <div class="menu-icon menu-icon-2"></div>
+                        <h2 class="menu-titre menu-titre-2">Le chic à la française</h2>
                         <p class="menu-p menu-p-2">Menu</p>
                     </a>
                 </article>
@@ -45,15 +45,15 @@
             <div id="section_menu2">
                 <article class="menu menu-3">
                     <a href="menu-delice.html">
-                        <div class="menu__ico menu__ico-3"></div>
-                        <h2 class="menu-titre menu-titre3">Le délice des papilles</h2>
+                        <div class="menu-icon menu-icon-3"></div>
+                        <h2 class="menu-titre menu-titre-3">Le délice des papilles</h2>
                         <p class="menu-p menu-p-3">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-4">
                     <a href="menu-palette.html">
-                        <div class="menu__ico menu__ico-4"></div>
-                        <h2 class="menu-titre menu-titre4">La palette du goût</h2>
+                        <div class="menu-icon menu-icon-4"></div>
+                        <h2 class="menu-titre menu-titre-4">La palette du goût</h2>
                         <p class="menu-p menu-p-4">Menu</p>
                     </a>
                 </article>
