--- a/menu-note.html
+++ b/menu-note.html
@@ -23,11 +23,6 @@
     </header>
     <div class="center_page center_page--list">
         <!--Contient le contenu centrale de la page-->
-        <section>
-            <header id="menu_header">
-                <h2>La note enchantée</h2>
-            </header>
-        </section>
         <section class="list list-1">
             <header class="list__header list-1__header">
                 <img class="list__ico list-1__ico" src="images/note2.png" alt="logo de La Note Enchantée">
@@ -107,7 +102,7 @@
         </section>
     </div>
     <footer id="main_footer">
-        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
+        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 
