--- a/menu-chic.html
+++ b/menu-chic.html
@@ -23,11 +23,6 @@
     </header>
     <div class="center_page center_page--list">
         <!--Contient le contenu centrale de la page-->
-        <section>
-            <header id="menu_header">
-                <h2>Le chic à la française</h2>
-            </header>
-        </section>
         <section class="list list-2">
             <header class="list__header list-2__header">
                 <br>
@@ -103,7 +98,7 @@
         </section>
     </div>
     <footer id="main_footer">
-        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
+        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 
