reglage des polices des menus

--- a/legals.html
+++ b/legals.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
-        en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
-        restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
-        carte !" />
-        <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
-        <link
-            href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
-            rel="stylesheet">
-        <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
-        <title>ohmyfood</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+    en ligne. Mentions légales" />
+    <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
+    <link
+        href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
+    <title>Mentions Légales - Ohmyfood</title>
+</head>
 
 <body>
     <header id="main_header">
         <!--Le "main header correspond au header contenant le nom du site et présent sur toutes les pages-->
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
-    <div class="center_page center_page--mentions">
+    <div class="center_page center_page--legals">
         <!--Contient le contenu centrale de la page-->
 
-        <article id=mentions>
+        <article id=legals>
             <h2 class=list_header>
                 Mentions légales
             </h2>
@@ -66,7 +64,7 @@
         </article>
     </div>
     <footer id="main_footer">
-        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 </body>
