--- a/chic.html
+++ b/chic.html
@@ -13,9 +13,9 @@
             href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
             rel="stylesheet">
         <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
-        <title>ohmyfood</title>
+        <title>ohmyfood - Le chic à la française</title>
     </head>
-
+    
 <body>
     <header id="main_header">
         <!--Le "main header correspond au header contenant le nom du site et présent sur toutes les pages-->
@@ -23,6 +23,11 @@
     </header>
     <div class="center_page center_page--list">
         <!--Contient le contenu centrale de la page-->
+        <section>
+            <header id="menu_header">
+                <h2>Le chic à la française</h2>
+            </header>
+        </section>
         <section class="list list-2">
             <header class="list__header list-2__header">
                 <br>
@@ -98,7 +103,7 @@
         </section>
     </div>
     <footer id="main_footer">
-        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 
