--- a/delice.html
+++ b/delice.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
-        en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
-        restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
-        carte !" />
-        <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
-        <link
-            href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
-            rel="stylesheet">
-        <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
-        <title>ohmyfood</title>
-    </head>
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160268117-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-160268117-1');
+    </script>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Menu du Délice des papilles - Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+    en ligne." />
+    <meta property="og:title" content="Le délice des papilles - ohmyfood" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://guetso.github.io./" />
+    <meta property="og:image" content="images/logo--minicolor.png" />
+    <meta property="og:description" content="Menu du Délice des papilles - Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+    en ligne." />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="ohmyfood">
+    <meta name="twitter:description" content="Menu du Délice des papilles - Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+    en ligne.">
+    <meta name="twitter:creator" content="@EmonUgo">
+    <meta name="twitter:image" content="images/logometa.png">
+    <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
+    <link
+        href="https://fonts.googleapis.com/css?family=Caveat%7CDancing+Script:500%7CMontserrat:400,500,600,700&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
+    <title>ohmyfood - Le délice des papilles</title>
+</head>
 
 <body>
     <header id="main_header">
@@ -23,6 +43,11 @@
     </header>
     <div class="center_page center_page--list">
         <!--Contient le contenu centrale de la page-->
+        <section>
+            <header id="menu_header">
+                <h2>Le délice des papilles</h2>
+            </header>
+        </section>
         <section class="list list-3">
             <header class="list__header list-3__header">
                 <br>
@@ -98,7 +123,7 @@
         </section>
     </div>
     <footer id="main_footer">
-        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 
