--- a/index.html
+++ b/index.html
@@ -2,12 +2,38 @@
 <html lang="fr">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160268117-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-160268117-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
     en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
     restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
     carte !" />
+    <meta property="og:title" content="ohmyfood" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://guetso.github.io./" />
+    <meta property="og:image" content="https://guetso.github.io/images/logo--minicolor.png" />
+    <meta property="og:description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+    en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
+    restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
+    carte !" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="ohmyfood">
+    <meta name="twitter:description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+    en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
+    restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
+    carte !">
+    <meta name="twitter:creator" content="@EmonUgo">
+    <meta name="twitter:image" content="images/logometa.png">
     <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
     <link
         href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
@@ -27,39 +53,39 @@
             <div id="section_menu">
                 <!--Le centre de la page n'est pour le moment composé que d'un élément, la présentation des cartes-->
                 <article class="menu menu-1">
-                    <a href="menu-note.html">
-                        <div class="menu-icon menu-icon-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
+                    <a href="note.html">
+                        <div class="menu__ico menu__ico-1"><img src="images/note2.png" alt="logo de La Note Enchantée">
                         </div>
-                        <h2 class="menu-titre menu-titre-1">La note enchantée</h2>
-                        <p class="menu-p menu-p-1">MENU</p>
+                        <h2 class="menu__titre menu__titre-1">La note enchantée</h2>
+                        <p class="menu__menu menu__menu-1">MENU</p>
                     </a>
                 </article>
                 <article class="menu menu-2">
-                    <a href="menu-chic.html">
-                        <div class="menu-icon menu-icon-2"></div>
-                        <h2 class="menu-titre menu-titre-2">Le chic à la française</h2>
-                        <p class="menu-p menu-p-2">Menu</p>
+                    <a href="chic.html">
+                        <div class="menu__ico menu__ico-2"></div>
+                        <h2 class="menu__titre menu__titre-2">Le chic à la française</h2>
+                        <p class="menu__menu menu__menu-2">Menu</p>
                     </a>
                 </article>
             </div>
             <div id="section_menu2">
                 <article class="menu menu-3">
-                    <a href="menu-delice.html">
-                        <div class="menu-icon menu-icon-3"></div>
-                        <h2 class="menu-titre menu-titre-3">Le délice des papilles</h2>
-                        <p class="menu-p menu-p-3">Menu</p>
+                    <a href="delice.html">
+                        <div class="menu__ico menu__ico-3"></div>
+                        <h2 class="menu__titre menu__titre-3">Le délice des papilles</h2>
+                        <p class="menu__menu menu__menu-3">Menu</p>
                     </a>
                 </article>
                 <article class="menu menu-4">
-                    <a href="menu-palette.html">
-                        <div class="menu-icon menu-icon-4"></div>
-                        <h2 class="menu-titre menu-titre-4">La palette du goût</h2>
-                        <p class="menu-p menu-p-4">Menu</p>
+                    <a href="palette.html">
+                        <div class="menu__ico menu__ico-4"></div>
+                        <h2 class="menu__titre menu__titre-4">La palette du goût</h2>
+                        <p class="menu__menu menu__menu-4">Menu</p>
                     </a>
                 </article>
             </div>
         </div>
-        <div id="soon">
+         <div id="soon">
             <div class="btn btn--anim">
                 <h2>Prochainement</h2>
                 <div class="dot dot--1">.</div>
@@ -69,7 +95,7 @@
         </div>
     </section>
     <footer id="main_footer">
-        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 </body>
