--- a/note.html
+++ b/note.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Ohmyfood! est un site web de réservation de restaurants et de composition de menus
-        en ligne. Notre concept permet aux utilisateurs de réduire leur temps d’attente dans les
-        restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la
-        carte !" />
-        <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
-        <link
-            href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CChilanka%7CDancing+Script:500%7CKurale%7CAbril+Fatface%7CItim%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
-            rel="stylesheet">
-        <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
-        <title>ohmyfood</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Menu de La Note Enchantée - Ohmyfood! est un site web de réservation de restaurants et de composition de menus
+    en ligne." />
+    <link rel="stylesheet" type="text/css" href="css/prefixed/style.css" media="screen">
+    <link href="https://fonts.googleapis.com/css?family=Kalam%7CDevonshire%7CMontserrat:400,500,600,700&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="images/logo--minicolor.png" sizes="32x30">
+    <title>ohmyfood - La Note Enchantée</title>
+</head>
 
 <body>
     <header id="main_header">
@@ -23,6 +20,11 @@
     </header>
     <div class="center_page center_page--list">
         <!--Contient le contenu centrale de la page-->
+        <section>
+            <header id="menu_header">
+                <h2>La note enchantée</h2>
+            </header>
+        </section>
         <section class="list list-1">
             <header class="list__header list-1__header">
                 <img class="list__ico list-1__ico" src="images/note2.png" alt="logo de La Note Enchantée">
@@ -102,7 +104,7 @@
         </section>
     </div>
     <footer id="main_footer">
-        <div class="mentions"><a href="mentions.html" target="_blank">Mentions légales</a></div>
+        <div class="legals"><a href="legals.html" target="_blank">Mentions légales</a></div>
         <div class="contact"><a href="mailto:legalloisprovensal@gmail.com">Contactez-nous</a></div>
     </footer>
 
