correction de la class container

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--Le "main header correspond au header contenant le nom du site et présent sur toutes les pages-->
         <h1><a href="index.html">ohmyfood</a></h1>
     </header>
-    <section class="conteneur">
+    <section class="container">
         <div class="center_page">
             <!--Contient le contenu centrale de la page-->
             <div id="section_menu">
@@ -59,7 +59,7 @@
                 </article>
             </div>
         </div>
-         <div id="soon">
+        <div id="soon">
             <div class="btn btn--anim">
                 <h2>Prochainement</h2>
                 <div class="dot dot--1">.</div>
